# cyolo

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sh
prd/: project-info.json
prd/@v2/: prd.txt  research.md
prd/@v2/tasks/: .review-discussion-task-001.md  .review-discussion-task-002.md  .review-discussion-task-004.md  .review-discussion-task-006.md  .review-discussion-task-007.md  task_001.py  task_002.py  task_003.py  task_004.py  task_006.py
prd/@v3/: prd.txt  research.md
prd/@v3/tasks/: .review-discussion-task-001.md  .review-discussion-task-003.md  .review-discussion-task-004.md  .review-discussion-task-005.md  .review-discussion-task-006.md  .review-discussion-task-007.md  task_001.py  task_002.py  task_003.py  task_004.py  task_005.py
prd/v10/tasks/: .review-discussion-task-004.md  task_004.py
prd/v2/tasks/: .review-discussion-task-003.md  .review-discussion-task-005.md  task_005.py  task_007.py
prd/v3/tasks/: .review-discussion-task-002.md  task_006.py  task_007.py  task_workflow.py
prd/v4/tasks/: .review-discussion-task-001.md  .review-discussion-task-002.md  .review-discussion-task-003.md  .review-discussion-task-004.md  .review-discussion-task-005.md  .review-discussion-task-006.md  task_001.py  (+7 more)
prd/v7/: wants.txt
src/: cli.rs  config.rs  detect.rs  diet.rs  error.rs  git.rs  main.rs  mcp.rs  profile.rs  runner.rs  symlink.rs
src/cli/: mod.rs
src/commands/: mod.rs
src/config/: mod.rs
src/detect/: mod.rs
src/error/: mod.rs
src/git/: mod.rs
src/mcp/: mod.rs
src/runner/: mod.rs
src/symlink/: mod.rs
src/util/: mod.rs
(+326 files in other folders)
